--- a/style.css
+++ b/style.css
@@ -88,12 +88,13 @@ button {
   font-size: 1rem;
   border: none;
   border-radius: 10px;
-  background: #4cafef;
+  background: #d41010;
   color: #fff;
   cursor: pointer;
   transition: background 0.2s;
 }
 
 button:hover {
-  background: #3793d8;
+  background: #fff;
+  color: #d41010;
 }
